<resources>
    <string name="app_name">DiseaseX</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="intro_string">Please enter the following details so that we can notify you on the following channels. The info you enter here doesn\'t reach us by any means</string>
    <string name="menu_diagnosis">Diagnose Yourself</string>
    <string name="diagnose_info">This space helps you diagnose yourself to the diseases existing in our database</string>
    <string name="diagnose_select_request">Please Select the Symptoms below that you\'re currently developing:</string>
    <string name="swelling_of_ankle">Swelling of Ankle</string>
    <string name="indigestion">Indigestion</string>
    <string name="constipation">Constipation</string>
    <string name="nosia">Nosia</string>
    <string name="body_dullness">Body Dullness</string>
    <string name="skin_redning">Skin Redning</string>
    <string name="fever">Fever</string>
    <string name="dark_leg">Dark Leg</string>
    <string name="painful_movement_of_legs">Painful Legs</string>
    <string name="non_fertile">Non-Fertile</string>
    <string name="reproductive_parts_failure">Reproductive Failure</string>
    <string name="skin_whitening">Skin Whitening</string>
    <string name="lack_of_blood">Lack of Blood</string>
    <string name="spots_on_skin">Spots on Skin</string>
    <string name="small_spots_on_whole_body">Small Spots Body</string>
    <string name="weakness">Weakness</string>
    <string name="lack_of_appetite">Lack of Appetite</string>
    <string name="break_in_skin">Break in Skin</string>
    <string name="abdominal_pain">Abdominal Pain</string>
    <string name="vomitting_blood">Vomitting Blood</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="headache">Headache</string>
    <string name="diagnose">Diagnose</string>
    <string name="diagnosis_results">Diagnosis Results</string>
    <string name="results_info">Your diagnosis results are here</string>
    <string name="cancel">CANCEL</string>
    <string name="high_risk">High Risk</string>
    <string name="moderate_risk">Moderate Risk</string>
    <string name="risk_alert">You are running at high risk, we highly recommend you to approach the nearest health center and get yourself diagnosed throughly.</string>
    <string name="animal_outbreak">Animal Outbreak</string>
    <string name="human_outbreak">Human Outbreak</string>
    <string name="update_notification_details">Update Notification Details</string>
    <string name="view_diseases">View Diseases</string>
    <string name="view_health_centers">View Health Centers</string>
    <string name="view_outbreak_details">View Outbreak Details</string>
    <string name="welcome_to_diseasex">Welcome to DiseaseX</string>
    <string name="submit">SUBMIT</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="diseases">Diseases</string>
    <string name="morbidity">Morbidity</string>
    <string name="mortality">Mortality</string>
    <string name="disease_name">Disease Name:</string>
    <string name="scientific_name">Scientific Name:</string>
    <string name="number_of_people_affected">Number of People Affected:</string>
    <string name="number_of_deaths">Number of Deaths:</string>
    <string name="symptoms">Symptoms</string>
    <string name="precautions">Precautions</string>
    <string name="address">Address:</string>
    <string name="center_incharge">Center Incharge:</string>
    <string name="dist_from_your_location">Dist from your location:</string>
    <string name="cases">Cases</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="web">Web</string>
    <string name="call">Call</string>
    <string name="outbreaks">Outbreaks</string>
    <string name="kms_away">Kms Away</string>
    <string name="livestock_affected">Livestocks Affected</string>
    <string name="vaccinations">Vaccinations</string>
    <string name="center_name">Center Name:</string>
    <string name="outbreak_area">Outbreak Area</string>
    <string name="call_health_center">CALL HEALTH CENTER</string>
    <string name="associated_health_center">Associated Health Center</string>
    <string name="past_outbreaks">Past Outbreaks</string>
    <string name="view_past_outbreaks">View Past Outbreaks</string>
    <string name="locate_on_map">Locate on map</string>
    <string name="nearest_health_centers">Nearest Health Centers</string>
    <string name="locate_nearest">Locate Nearest</string>
</resources>
