<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MapsActivity">

    <item
        android:id="@+id/view_diseases"
        android:icon="@drawable/ic_sentiment_dissatisfied_black_24dp"
        android:title="@string/view_diseases" />

    <item
        android:id="@+id/view_health_centers"
        android:icon="@drawable/ic_baseline_home_work_24"
        android:title="@string/view_health_centers" />

    <item
        android:id="@+id/view_outbreak"
        android:icon="@drawable/ic_warning_black_24dp"
        android:title="@string/view_outbreak_details" />

    <item
        android:id="@+id/diagnose_self"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/menu_diagnosis"/>

    <item
        android:id="@+id/view_past_outbreaks"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/view_past_outbreaks"/>

</menu>