<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:contentPadding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diagnosis_results"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results_info"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/diagnosis_card_high_risk"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@android:color/holo_red_dark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/high_risk"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/diagnosis_card_moderate_risk"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/moderate_risk"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/diagnosis_card_little_risk"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Little Risk"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/diagnose_result_rv"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/risk_alert_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/risk_alert"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/diagnose_result_cancel"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/cancel"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>